--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
         <div class="q">This is an inspiring quote,or a testimonial from a customer. Maybe it's just filling up page,or maybe people will actually read it.Who knows? All I know is that it look nice.</div>    
     <div class="au">-Thor,God of Thunder</div>
     </div>
-    <div class="footer">
-        <p>Call to action it's time!</p>
-        <p>Sign up for our product by clicking that button right over there!</p>
+    <div class="sign">
+        <div class="call">Call to action it's time!
+                <div class="ss">Sign up for our product by clicking that button right over there!</div>
+        </div>    
         <button>Sign up</button>
     </div>
-    
+    <div class="footer">Copyright © The Odin Project 2021</div>
 </body>
 </html>
 
