--- a/index.html
+++ b/index.html
@@ -1,64 +1,81 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sample</title>
-    <link rel="stylesheet" href="style.css">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>landing page</title>
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body>
     <div class="header">
-        <div class="head">
-            <div class="logo">Header Logo </div>
-            <div class="link">    
-            <a href="#">header link one</a>
-            <a href="#">header link two</a>
-            <a href="#">header link three</a>
-            </div>
+      <div class="header-items">
+        <div class="header-logo">Header Logo</div>
+        <div class="header-links">
+          <div>header link one</div>
+          <div>header link two</div>
+          <div>header link three</div>
         </div>
-    <div class="content">
-            <div class="ftext">
-            <div class="main"> This website is awesome</div>                  
-              <p>This website have some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-              <button>Sign up</button>
-            </div>
-            <div class="ltext">
-             <p>this is a placeholder for an image</p> 
-            </div>
+      </div>
+      <div class="hero">
+        <div>
+          <div class="hero-main">This website is awesome</div>
+          <div class="hero-sub">
+            This website has some subtext that goes here under the main title.
+            it's a smaller font and the color is lower contrast
+          </div>
+          <button type="button">Sign up</button>
         </div>
+        <div class="placeholder">this is a placeholder for an image</div>
+      </div>
     </div>
-    
-        <div class="info">Some random information.</div>
-        <div class="container">
-            <div class="border">
-                <div class="empty-box"></div>
-                    <div class="txt">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="border">
-                <div class="empty-box"></div>
-                    <div class="txt">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="border">    
-                <div class="empty-box"></div>
-                    <div class="txt">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="border">        
-                <div class="empty-box"></div>
-                    <div class="txt">this is some subtext under an illustration or image</div>
-            </div>        
+    <div class="rand-info">
+      <div class="info">Some random information.</div>
+      <div class="rand-boxes">
+        <div>
+          <div class="box"></div>
+          <div class="text">
+            this is some subtext under an illustration or image
+          </div>
         </div>
+        <div>
+          <div class="box"></div>
+          <div class="text">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+        <div>
+          <div class="box"></div>
+          <div class="text">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+        <div>
+          <div class="box"></div>
+          <div class="text">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="quote">
-        <div class="q">This is an inspiring quote,or a testimonial from a customer. Maybe it's just filling up page,or maybe people will actually read it.Who knows? All I know is that it look nice.</div>    
-    <div class="au">-Thor,God of Thunder</div>
+      <div class="quote-text">
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's
+        just filling up space, or maybe people will actually read it. Who knows?
+        All i know is that it looks nice.
+      </div>
+      <div class="quote-sign">-Thor, God of Thunder</div>
     </div>
-    <div class="sign">
-        <div class="call">Call to action it's time!
-                <div class="ss">Sign up for our product by clicking that button right over there!</div>
-        </div>    
-        <button>Sign up</button>
+    <div class="sign-up">
+      <div>
+        <div class="sign-up-text">Call to action! It's time!</div>
+        <div class="sign-up-subtext">
+          Sign up for our product by clicking that button right over there!
+        </div>
+      </div>
+      <button type="button" class="sign-up-btn">Sign up</button>
     </div>
-    <div class="footer">Copyright © The Odin Project 2021</div>
-</body>
+    <div class="footer">
+      <div>Copyright © The Odin Project 2021</div>
+    </div>
+  </body>
 </html>
-
